# rust-cpp-interopt

./: README.md
cpp-lib/: .gitignore  CMakeLists.txt
cpp-lib/src/: example.c  example.h  example2.cpp  example2.hpp
rust-and-c/: Cargo.toml  build.rs  wrapper.h
rust-and-c/src/: main.rs
rust-and-cpp/: Cargo.toml  build.rs
rust-and-cpp/src/: main.rs
